--- a/src/main/res/layout/fragment_settings_about.xml
+++ b/src/main/res/layout/fragment_settings_about.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/Theme.Echtzeyt"
-    tools:context=".LicensesActivity">
+    tools:context=".fragments.settings.AboutSettingsFragment">
 
     <com.maddin.echtzeyt.components.BottomFadeEdgeScrollView
         android:id="@+id/scrollLicenses"
