--- a/src/main/res/values/values.xml
+++ b/src/main/res/values/values.xml
@@ -15,6 +15,9 @@
     <dimen name="bigfloating_margin">25dp</dimen>
     <dimen name="bigfloating_padding">12dp</dimen>
 
+    <dimen name="notification_margin_x">@dimen/bigfloating_margin</dimen>
+    <dimen name="notification_margin_y">16dp</dimen>
+
     <dimen name="smallfloating_size">48dp</dimen>
     <dimen name="smallfloating_padding">9dp</dimen>
     <dimen name="smallfloating_padding_text_x">10dp</dimen>
